# aeroe

./: .gitignore  .gitmodules  README.md  VENDOR_COMMIT  flow.md  package.json  report.txt  tailwind.config.js
.github/workflows/: hosted-release.yml  release.yml
scripts/: prepare_nockchain.sh  rebuild_wallet.sh
src/: app.css
src-tauri/: .taurignore  Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/assets/: watcher
src-tauri/capabilities/: default.json
src-tauri/entitlements/: aeroe.entitlements
src-tauri/icons/: icon.icns
src-tauri/src/: keycrypt.rs  lib.rs  main.rs  manager.rs  prover.rs  services.rs  thread_utils.rs  update_checker.rs  wallet_app.rs  wallet_thread.rs  watcher.rs
src-tauri/src/commands/: kc.rs  mod.rs  nockchain_node.rs  terms.rs  updater.rs  wallet.rs
src-tauri/src/manager/: mod.rs  nockchain_node.rs  wallet.rs
src-tauri/src/prover/: config.rs  miner.rs  mod.rs  network.rs  status.rs
src/lib/components/: AddWalletWizard.svelte  Background.svelte  ComingSoon.svelte  ContentArea.svelte  FeatureArea.svelte  Footer.svelte  MainArea.svelte  Modal.svelte  TopNav.svelte
src/lib/components/TopNav/: Desktop.svelte  DesktopItem.svelte  Logo.svelte  MobileMenu.svelte
src/lib/components/shared/: Button.svelte  PageLayout.svelte  TopNav.svelte
src/lib/components/shared/TopNav/: Desktop.svelte  Minimal.svelte  Mobile.svelte
src/lib/components/wallet/: BigButton.svelte  Button.svelte  Chart.svelte  ConfirmationModal.svelte  Header.svelte  Home.svelte  QrCode.svelte  ReceiveMVP.svelte  SendForm.svelte  TransactionCard.svelte  TransactionList.svelte  Transactions.svelte
src/lib/scripts/: commands.js  mock-data.js  stores.js  stores.ts  wallet-commands.js
src/lib/services/: index.ts  tauri.mock.ts  tauri.ts
src/lib/stores/: login.ts  main.ts  node.ts  onboarding.ts  session.ts  wallet.ts  welcome.ts
src/routes/: +layout.svelte
src/routes/(landing)/: +layout.svelte  +page.svelte  PrivacyPolicy.svelte  Terms.svelte  TermsofUse.svelte
src/routes/dev/: +page.svelte  Aeroe.svelte  Button.svelte  Node.svelte  Terms.svelte  Transactions.svelte  Vault.svelte  Wallet.svelte
src/routes/explorer/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
src/routes/mining/: +layout.svelte  +page.svelte  dev.js
src/routes/select-wallet/: +page.svelte
src/routes/wallet/: +layout.svelte  +page.svelte  BigButton.svelte  Header.svelte  ListHistory.svelte  ReceiveMVP.svelte  Send.svelte  Title.svelte
src/routes/welcome/: +layout.svelte  +page.svelte  CreatePassword.svelte  CreateWallet.svelte  ImportWallet.svelte  Splash.svelte
