[package]
name = "aeroe"
description = "Desktop client for nockchain"
authors = ["swpsco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aeroe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# external
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
reqwest = { version = "0.11", features = ["json"] }
async-channel = { version = "1.5.1" }
async-oneshot = { version = "0.5.0" }
dotenv = { version = "0.15.0" }
clap = { version = "4.5.37", features = ["derive"] }
base64 = { version = "0.21" }
chrono = { version = "0.4.41" }
bs58 = { version = "0.5.1" }
libp2p = { version = "0.55.0" }
equix = { version = "0.2.3" }
getrandom = { version = "0.2.15", features = ["std"] }
libc = { version = "0.2.172" }
argon2 = { version = "0.5.3" }
chacha20poly1305 = { version = "0.10.1" }
rand_core = { version = "0.9" }
rand = { version = "0.9" }

# internal
#libconfig = { path = "../../nockpool/libconfig" }
#libnockpool = { path = "../../nockpool/libnockpool" }

# stratum v2
codec_sv2 = { git = "https://github.com/stratum-mining/stratum.git", rev = "6a4874d1302327e169cd894dc5a79f52d533dcc9", package = "codec_sv2", default-features = false }
network_helpers_sv2 = { git = "https://github.com/stratum-mining/stratum.git", rev = "6a4874d1302327e169cd894dc5a79f52d533dcc9", package = "network_helpers_sv2" }
key-utils = { git = "https://github.com/stratum-mining/stratum.git", rev = "6a4874d1302327e169cd894dc5a79f52d533dcc9", package = "key-utils" }
roles_logic_sv2 = { git = "https://github.com/stratum-mining/stratum.git", rev = "6a4874d1302327e169cd894dc5a79f52d533dcc9", package = "roles_logic_sv2" }

# nockchain
nockchain-wallet-lib = { git = "https://github.com/swpsco/nockchain-wallet-lib.git", rev = "2c5d37992072b33c1ffb5c83daa14620d656e73c" }
nockchain = { git = "https://github.com/swpsco/nockchain.git", rev = "c4ccfa9031ea8138076bb6bb9c76dc44b6dbe40e", package = "nockchain" }
nockvm = { git = "https://github.com/swpsco/nockchain.git", rev = "c4ccfa9031ea8138076bb6bb9c76dc44b6dbe40e", package = "nockvm" }
nockapp = { git = "https://github.com/swpsco/nockchain.git", rev = "c4ccfa9031ea8138076bb6bb9c76dc44b6dbe40e", package = "nockapp" }
kernels = { git = "https://github.com/swpsco/nockchain.git", rev = "c4ccfa9031ea8138076bb6bb9c76dc44b6dbe40e", package = "kernels" }
zkvm-jetpack = { git = "https://github.com/swpsco/nockchain.git", rev = "c4ccfa9031ea8138076bb6bb9c76dc44b6dbe40e", package = "zkvm-jetpack" }
nockvm_macros = { git = "https://github.com/swpsco/nockchain.git", rev = "c4ccfa9031ea8138076bb6bb9c76dc44b6dbe40e", package = "nockvm_macros" }
nockchain-bitcoin-sync = { git = "https://github.com/swpsco/nockchain.git", rev = "c4ccfa9031ea8138076bb6bb9c76dc44b6dbe40e", package = "nockchain-bitcoin-sync" }
nockchain-libp2p-io = { git = "https://github.com/swpsco/nockchain.git", rev = "c4ccfa9031ea8138076bb6bb9c76dc44b6dbe40e", package = "nockchain-libp2p-io" }
futures = "0.3.31"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
